veil-tests/src/compile_tests/fail/pii_multiple_fields.rs
fn main() {}

#[derive(veil::Pii)]
struct Foo {
    bar: String,
    baz: String
}
