veil-tests/src/compile_tests/fail/pii_multiple_fields.stderr
error: this trait cannot be derived for structs with multiple fields
 --> src/compile_tests/fail/pii_multiple_fields.rs:4:1
  |
4 | struct Foo {
  | ^^^^^^
